<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="8dp"
    android:scrollbars="vertical">

    <LinearLayout
        android:id="@+id/fragment_about_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/textview_about_libraries_title"
            android:textColor="@color/colorAccent"
            android:padding="8dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:text="@string/textview_bottombar_library"
            android:padding="4dp"
            android:textColor="@android:color/black"
            android:lineSpacingExtra="4dp"
            android:drawableEnd="@drawable/ic_search_black_24dp"
            android:drawableRight="@drawable/ic_search_black_24dp"
            android:onClick="openBottomBarLicense"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            android:text="@string/textview_about_app_title"
            android:textColor="@color/colorAccent"
            android:padding="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:lineSpacingExtra="4dp"
            android:text="@string/textview_about_app_text"
            android:textColor="@android:color/black"
            android:padding="4dp"/>

        </LinearLayout>

</android.support.v7.widget.CardView>