<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:layout_margin="8dp"
    card_view:cardBackgroundColor="@android:color/white"
    card_view:cardCornerRadius="8dp">

    <LinearLayout
        android:id="@+id/fragment_connection_info_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.gms.ads.AdView
                android:id="@+id/adView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                ads:adSize="BANNER"
                ads:adUnitId="@string/banner_ad_unit_id">
            </com.google.android.gms.ads.AdView>

        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_home_connection_information"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:padding="12dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/color_divider"
            android:padding="8dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="4dp">

            <TableRow>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_connected_title"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/currently_connected_textview"
                    android:text="@string/textview_home_unknown"
                    android:padding="8dp"
                    android:textSize="14sp" />
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_mac_address_title"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_unknown"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:id="@+id/current_mac_address_textview"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_ip_address_title"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_unknown"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:id="@+id/current_ip_address_textview"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_link_speed_title"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_unknown"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:id="@+id/current_link_speed_textview"/>
            </TableRow>

            <TableRow>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_signal_strength_title"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_unknown"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:id="@+id/current_signal_strength_textview"/>
            </TableRow>

            <TableRow
                android:visibility="visible">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_wifi_frequency_title"
                    android:padding="8dp"
                    android:textSize="16sp"
                    android:textColor="@android:color/black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textview_home_unknown"
                    android:padding="8dp"
                    android:textSize="14sp"
                    android:id="@+id/current_wifi_frequency_textview"/>
            </TableRow>

        </TableLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>